# regs

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  regs.code-workspace
.devcontainer/: Dockerfile  Dockerfile.org  devcontainer.json
.github/workflows/: cmake.yml
docker/: Dockerfile  dockerfile
example/: CMakeLists.txt  example.cpp
include/: Access.h  Bytes.h  Crtp.h  Fields.h  Register.h  RegisterArray.h  RegisterBase.h  RegisterPack.h  SingleRegister.h  Utility.h
test/: CMakeLists.txt  test.cpp  testBinaryParsing.cpp  testBytes.cpp  testRegister.cpp  testRegisterPack.cpp
